--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -15,6 +15,9 @@ set_property(TARGET cvt APPEND PROPERTY LINK_OPTIONS "${CVT_VISIBILITY_FLAGS}")
 
 set(CVT_TEST_LIBRARY_NAME cvt)
 
+#add_executable(temp temp.cpp)
+#target_link_libraries(temp cvt)
+
 # Tests
 set(TEST_EXECS "")
 file(GLOB TEST_SRCS tests/cpp/*.cc)
